# api-gateway

./: .env.example  Cargo.toml  README.md  build.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20230713_150505_create_users_seed.rs
migrations/2023-07-06-193634_users/: up.sql
proto/: auth.proto  out.txt
src/: client.rs  main.rs  schema.rs  server.rs
src/app/: config.rs  init.rs  mod.rs  route.rs
src/app/api/: mod.rs  users.rs
src/app/api/auth/: login.rs
src/app/db/: mod.rs
src/app/db/models/: users.rs
src/app/models/: user.rs
src/auth/: login.rs  token.rs
src/models/: user.rs
