[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth-server"
path = "src/server.rs"

[[bin]]
name = "auth-client"
path = "src/client.rs"

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
