[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth-server"
path = "src/server.rs"

[[bin]]
name = "auth-client"
path = "src/client.rs"

[dependencies]
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
scrypt = "0.11.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
uuid = "1.3.4"
warp = "0.3.5"

[build-dependencies]
tonic-build = "0.9.2"
